# textrenderer

./: CMakeLists.txt  CMakeUserPresets.json
hb-buffer-learn/: CMakeLists.txt  hb-buffer-learn.cpp  hb-buffer-learn.h
textrenderer/: CMakeLists (2).txt  CMakeLists.txt  textrenderer - failed.h  textrenderer-narrowcolumn.cpp  textrenderer-widecolumn.cpp  textrenderer.cpp  textrenderer.h  unicode_ranges.h
textrenderer-console/: CMakeLists.txt  textrenderer-console.cpp  textrenderer-console.h
